--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,7 +109,7 @@ body {
         overflow: hidden;
         width: 330px;
         margin-right: 5px;
-        margin-left: 30px;
+        margin-left: 15px;
         margin-bottom: 80px;
         margin-top: 30px;
     }
@@ -148,7 +148,7 @@ body {
         width: 100px;
         margin-left: 35%;
         text-align: center;
-        margin-top: 25px;
+        margin-top: px;
         margin-bottom: 30px
     }
 }
